# enpm697_finalproject

./: .gitignore  .~lock.slides.odp#  README.md  TODO.md  Writeup.md  slides.odp
luciferris/: .gitignore  Cargo.toml  README.md  run.sh
luciferris/example_configs/: get_command.json  get_command_target.json  post_log.json
luciferris/run_scripts/: borrow.sh  post_log.sh
luciferris/src/: borrow.rs  c2.rs  main.rs  ransom.rs  snoop.rs  spread.rs
