[package]
name = "luciferris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chacha20poly1305 = "0.10.1"
clap = { version = "4.1.8", features = ["derive"] }
config = "0.13.3"
env_logger = "0.10.0"
log = "0.4.17"
qscan = "0.6.0"
rustls = "0.20.8"
serde = { version = "1.0.159", features = ["derive"] }
shodan-client = "0.0.2"
ssh = "0.1.4"
sysinfo = "0.28.2"

[[bin]]
edition = "2021"
name = "luciferris"
path = "src/main.rs"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true # link time optimization
codegen-units = 1 # compile time de-parallelization
panic = "abort" # remove error handling code
